# tMapReduce

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md  build.sh  test.cc
docker/etcd/: Dockerfile
docker/gateway/: Dockerfile
docker/master/: Dockerfile
docker/worker/: Dockerfile
example/word_count/: CMakeLists.txt  word_count.cc  word_count_client.cc
include/mapreduce/: coding.h  job.h  master.h  mrer.h  mrf.h  state.h  status.h  validator.h  worker.h  wrapper.h
include/mapreduce/rpc/: master_service.pb.cc  master_service.pb.h  state.pb.cc  state.pb.h  worker_service.pb.cc  worker_service.pb.h
include/tmapreduce/: wrapper.h
k8s/: gateway_deployment.yml  gateway_svc.yml  master_statefulset.yml  master_svc.yml
mrf/: mrf.cc
protos/: master_service.proto  state.proto  worker_service.proto
scripts/: deploy.sh  run_etcd.sh  run_gateway.sh  run_master.sh  run_worker.sh  single_node.sh  undeploy.sh
server/: master_server.cc  validator.cc  worker_server.cc
src/: job.cc  master.cc  state.cc  worker.cc  wrapper.cc
src/tmapreduce/: base64.h  closure.cc  closure.h  gateway.cc  job.cc  job.h  master.cc  master.h  master_server.cc  mrf.h  status.h  validator.h  worker.cc  worker.h  worker_server.cc  wrapper.cc  wrapper.h
src/tmapreduce/rpc/: master_service.pb.cc  master_service.pb.h  state.pb.cc  state.pb.h  worker_service.pb.cc  worker_service.pb.h
